src/objects/SPE2_CC_Contact_Details__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>SPE2_CC_Contact_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Id__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identifier_Param__c</fullName>
        <label>Identifier Param</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScoreCard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ScoreCard</label>
        <referenceTo>SPE_ScoreCard__c</referenceTo>
        <relationshipLabel>CC Contact Details</relationshipLabel>
        <relationshipName>CC_Contact_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scorecard_Supplier_Map__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scorecard Supplier Map</label>
        <referenceTo>SPE_ScorecardSupplierMap__c</referenceTo>
        <relationshipName>SPE2_CC_Contact_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CC Contact Detail</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>SPE2 CC Contact Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Contact Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>